# als-kg

./: .copier-answers.yml  404.html  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  config.yaml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: pypi-publish.yaml
about/: index.html
docs/: about.md  index.md  published-schema.md
docs/schema/: als_kg.yaml
elements/: index.html
elements/Anatomy/: index.html
elements/Association/: index.html
elements/BiologicalConcept/: index.html
elements/BiologicalProcess/: index.html
elements/Boolean/: index.html
elements/CellularComponent/: index.html
elements/ChemicalEntity/: index.html
elements/ClinvarIdentifier/: index.html
elements/CtdIdentifier/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Disease/: index.html
elements/DiseaseDiseaseAssociation/: index.html
elements/DiseaseOrPhenotype/: index.html
elements/DiseasePhenotypeAssociation/: index.html
elements/DiseaseSubtype/: index.html
elements/DiseaseTypeEnum/: index.html
elements/Double/: index.html
elements/Drug/: index.html
elements/DrugBankIdentifier/: index.html
elements/DrugDiseaseTherapeuticAssociation/: index.html
elements/DrugTargetAssociation/: index.html
elements/EvidenceTypeEnum/: index.html
elements/ExposureDiseaseAssociation/: index.html
elements/ExposureOrStressor/: index.html
elements/Float/: index.html
elements/Gene/: index.html
elements/GeneDiseaseAssociation/: index.html
elements/GeneExpressionAssociation/: index.html
elements/GeneTypeEnum/: index.html
elements/GoIdentifier/: index.html
elements/HpoIdentifier/: index.html
elements/Integer/: index.html
elements/Time/: index.html
examples/: README.md
schema/: als_kg.yaml
scripts/: optimuskg_download_parquet.py  optimuskg_parquet_to_neo4j_csv.py
search/: search_index.json
tests/: __init__.py  test_data.py  test_validate_neo4j.py
(+401 files in other folders)
